--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "An app and guide showcasing how to build a music recommendation site using Apollo",
   "main": "index.js",
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "pretest": "npm run lint --silent",
+    "test": "meteor test --once --driver-package dispatch:mocha-phantomjs",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -31,5 +34,18 @@
     "eslint": "^2.10.2",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-react": "^5.1.1"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "ecmaVersion": 7,
+      "sourceType": "module"
+    },
+    "plugins": [
+      "react"
+    ],
+    "extends": [
+      "airbnb"
+    ]
   }
 }
