--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "homepage": "https://github.com/TimMikeladze/music-recommendations#readme",
   "dependencies": {
     "apollo-client": "^0.3.12",
+    "express": "^4.13.4",
+    "graphql-tools": "^0.4.2",
+    "http-proxy-middleware": "^0.15.0",
+    "meteor-node-stubs": "^0.2.3",
     "react": "^15.1.0",
     "react-apollo": "^0.3.5",
     "react-dom": "^15.1.0",
